stopping question text being cut off

--- a/src/app/styles/whoQuiz.module.css
+++ b/src/app/styles/whoQuiz.module.css
@@ -127,7 +127,7 @@
   display: flex;
   height: 100px;
   align-items: center;
-  margin: 4% 0;
+  margin: 4%;
   padding: 0 2px;
 }
 
@@ -174,6 +174,7 @@
 .btn {
   margin: 4% 0;
   padding: 2px;
+  color: white;
   background-color: #032687;
   width: 250px;
 }
@@ -459,6 +460,10 @@
   .roundButtonsComponent {
     grid-template-columns: 50% 50%;
   }
+
+.quizQuestion {
+   width: 100%;
+}
 }
 @media only screen and (min-width: 450px) and (max-width: 600px) {
   .roundButtonsComponent {
